--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
             <h3>Games website (Front-end)</h3>
             <div class="d-flex justify-content-around">
               <div class="w-50">
-                <p class="mb-1 mt-3">Build With</p>
+                <h6 class="mb-2 mt-3">Build With</h6>
 
                 <img class="w-50" src="assets/images/html.png" alt="" />
               </div>
               <div class="w-50">
-                <p class="mb-1 mt-3">Libraries used</p>
+                <h6 class="mb-1 mt-3">Libraries used</h6>
                 <a class="" href="https://scrollrevealjs.org/">
                   Scroll Reveal</a
                 >
@@ -139,7 +139,7 @@
                 href="https://lively-sfogliatella-97ad5a.netlify.app/"
                 target="_blank"
               >
-                View project</a
+              View Site</a
               >
             </div>
             <!-- <a href="https://lighthearted-smakager-a6c8ec.netlify.app/"></a>
@@ -148,7 +148,119 @@
         </div>
 
 
-        <!-- /////////////////////////////////////////////////////////////////////////////////////////// 2nd -->
+        <!-- ////////////////////////////////////////////////////////////////////////////////////////////////////// 1st -->
+      <div class="container d-flex flex-column gap-4 ">
+        <div class="row mx-2 bg-light rounded-lg caro-container">
+          <div class="col-md-6 col-12 rounded-lg p-4">
+            <div
+              id="carouselExample"
+              class="carousel slide"
+              data-bs-wrap="true"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner caro-img">
+                <div class="carousel-item active" data-bs-interval="1300">
+                  <img
+                    src="./assets/images/p401.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+                <div class="carousel-item" data-bs-interval="2500">
+                  <img
+                    src="./assets/images/p402.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+                <div class="carousel-item" data-bs-interval="2500">
+                  <img
+                    src="./assets/images/p403.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+                <div class="carousel-item" data-bs-interval="2500">
+                  <img
+                    src="./assets/images/p404.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+                <div class="carousel-item" data-bs-interval="2500">
+                  <img
+                    src="./assets/images/p405.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+                <div class="carousel-item" data-bs-interval="2500">
+                  <img
+                    src="./assets/images/p406.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+               
+              </div>
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#carouselExample"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#carouselExample"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+          <div class="col-md-6 col-12 p-4">
+            <h3>E-commerce (Front-end)</h3>
+           
+            <div class="d-flex justify-content-around">
+              <div class="w-50">
+                <h6 class="mb-2 mt-3">Build With</h6>
+                <img  style="width: 20%" src="./assets/images/react.png" alt="">
+                <img class="w-50" src="assets/images/html.png" alt="" />
+              </div>
+              <div class="w-50">
+               <h6 class="mt-3">With Features Like</h6>
+               <ul><li >Add to Cart</li>
+               <li>Add to Wish List</li>
+               <li>Search</li></ul>
+              </div>
+            </div>
+
+            <div>
+              <a
+                class="btn btn-info mt-5"
+                href="https://glistening-croquembouche-472bcc.netlify.app/"
+                target="_blank"
+              >
+              View Site</a
+              >
+            </div>
+            <!-- <a href="https://lighthearted-smakager-a6c8ec.netlify.app/"></a>
+         <a href="https://friendly-parfait-6dea6d.netlify.app/"></a> -->
+          </div>
+        </div>
+
+        <!-- /////////////////////////////////////////////////////////////////////////////////////////// 3nd -->
         <div class="row mx-2 bg-light rounded-lg caro-container">
           <div class="col-md-6 col-12 rounded-lg p-4">
             <div
@@ -204,7 +316,7 @@
             <h3>React Web Chat App (Front-end)</h3>
             <div class="d-flex justify-content-around">
               <div class="w-50">
-                <p class="mb-1 mt-3">Build With</p>
+                <h6 class="mb-2 mt-3">Build With</h6>
 
                 <img  style="width: 20%" src="./assets/images/react.png" alt="">
                 <img class="w-50" src="assets/images/html.png" alt="" />
@@ -220,7 +332,7 @@
                 href="https://lighthearted-smakager-a6c8ec.netlify.app/"
                 target="_blank"
               >
-                View project</a
+              View Site</a
               >
             </div>
             <!-- <a href="https://lighthearted-smakager-a6c8ec.netlify.app/"></a>
@@ -228,7 +340,7 @@
           </div>
         </div>
 
-<!-- //////////////////////////////////////////////////////////////////////////////////////////////////// 3rd -->
+<!-- //////////////////////////////////////////////////////////////////////////////////////////////////// 4rd -->
         <div class="row mx-2 bg-light rounded-lg mb-5 caro-container">
             <div class="col-md-6 col-12 rounded-lg p-4">
               <div
@@ -306,12 +418,12 @@
               <p>With E-mail validation</p>
               <div class="d-flex justify-content-around">
                 <div class="w-50">
-                  <p class="mb-1 mt-3">Build With</p>
+                  <h6 class="mb-2 mt-3">Build With</h6>
   
                   <img class="w-50" src="assets/images/html.png" alt="" />
                 </div>
                 <div class="w-50">
-                  <p class="mb-1 mt-3">Libraries used</p>
+                  <h6 class="mb-1 mt-3">Libraries used</h6>
                   <a class="" href="https://scrollrevealjs.org/"> Scroll Reveal</a>
                 </div>
               </div>
@@ -322,7 +434,7 @@
                   href="https://friendly-parfait-6dea6d.netlify.app/"
                   target="_blank"
                 >
-                  View project</a
+                  View Site</a
                 >
               </div>
               <!-- <a href="https://lighthearted-smakager-a6c8ec.netlify.app/"></a>
