--- a/index.html
+++ b/index.html
@@ -34,63 +34,63 @@
                 <div class="carousel-inner caro-img">
                   <div class="carousel-item active" data-bs-interval="1300">
                     <img
-                      src="./assets/images/p101.png"
+                      src="./assets/images/p101.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
                   </div>
                   <div class="carousel-item" data-bs-interval="2500">
                     <img
-                      src="./assets/images/p102.png"
+                      src="./assets/images/p102.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
                   </div>
                   <div class="carousel-item" data-bs-interval="2500">
                     <img
-                      src="./assets/images/p103.png"
+                      src="./assets/images/p103.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
                   </div>
                   <div class="carousel-item" data-bs-interval="2500">
                     <img
-                      src="./assets/images/p105.png"
+                      src="./assets/images/p105.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
                   </div>
                   <div class="carousel-item" data-bs-interval="2500">
                     <img
-                      src="./assets/images/p107.png"
+                      src="./assets/images/p107.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
                   </div>
                   <div class="carousel-item" data-bs-interval="2500">
                     <img
-                      src="./assets/images/p108.png"
+                      src="./assets/images/p108.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
                   </div>
                   <div class="carousel-item" data-bs-interval="2500">
                     <img
-                      src="./assets/images/p109.png"
+                      src="./assets/images/p109.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
                   </div>
                   <div class="carousel-item" data-bs-interval="2500">
                     <img
-                      src="./assets/images/p110.png"
+                      src="./assets/images/p110.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
                   </div>
                   <div class="carousel-item" data-bs-interval="2500">
                     <img
-                      src="./assets/images/p111.png"
+                      src="./assets/images/p111.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
@@ -166,42 +166,42 @@
                 <div class="carousel-inner caro-img">
                   <div class="carousel-item active" data-bs-interval="1300">
                     <img
-                      src="./assets/images/p401.png"
+                      src="./assets/images/p401.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
                   </div>
                   <div class="carousel-item" data-bs-interval="2500">
                     <img
-                      src="./assets/images/p402.png"
+                      src="./assets/images/p402.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
                   </div>
                   <div class="carousel-item" data-bs-interval="2500">
                     <img
-                      src="./assets/images/p403.png"
+                      src="./assets/images/p403.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
                   </div>
                   <div class="carousel-item" data-bs-interval="2500">
                     <img
-                      src="./assets/images/p404.png"
+                      src="./assets/images/p404.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
                   </div>
                   <div class="carousel-item" data-bs-interval="2500">
                     <img
-                      src="./assets/images/p405.png"
+                      src="./assets/images/p405.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
                   </div>
                   <div class="carousel-item" data-bs-interval="2500">
                     <img
-                      src="./assets/images/p406.png"
+                      src="./assets/images/p406.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
@@ -284,14 +284,14 @@
                 <div class="carousel-inner caro-img">
                   <div class="carousel-item active" data-bs-interval="1700">
                     <img
-                      src="./assets/images/p201.png"
+                      src="./assets/images/p201.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
                   </div>
                   <div class="carousel-item" data-bs-interval="2500">
                     <img
-                      src="./assets/images/p203.png"
+                      src="./assets/images/p203.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
@@ -367,35 +367,35 @@
                 <div class="carousel-inner caro-img">
                   <div class="carousel-item active" data-bs-interval="1300">
                     <img
-                      src="./assets/images/p301.png"
+                      src="./assets/images/p301.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
                   </div>
                   <div class="carousel-item" data-bs-interval="2500">
                     <img
-                      src="./assets/images/p303.png"
+                      src="./assets/images/p303.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
                   </div>
                   <div class="carousel-item" data-bs-interval="2500">
                     <img
-                      src="./assets/images/p304.png"
+                      src="./assets/images/p304.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
                   </div>
                   <div class="carousel-item" data-bs-interval="2500">
                     <img
-                      src="./assets/images/p302.png"
+                      src="./assets/images/p302.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
                   </div>
                   <div class="carousel-item" data-bs-interval="2500">
                     <img
-                      src="./assets/images/p305.png"
+                      src="./assets/images/p305.jpg"
                       class="d-block w-100"
                       alt="..."
                     />
